--- a/templates/homework.html
+++ b/templates/homework.html
@@ -5,11 +5,15 @@
     <title>Homework</title>
 </head>
 <header>
-    <h1> Homework </h1>
+    <h1 style="font-family: Garamond"> Homework </h1>
 </header>
 
 
-<body>
+<body style="font-family: Garamond">
+Some homework here
+    <br>
+    <br>
+<a href="{{ url_for('type') }}">Go back</a>
 
 </body>
 </html>
