--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   {% endif %}
 {% endwith %}
 
-<div class="container">
+<div class="container" style="font-family: Garamond">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form method=POST action="{{ url_for('login') }}">
@@ -22,7 +22,7 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" name="pass" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                <button type="submit" class="btn btn-primary btn-block" style="font-family: Garamond">Log In</button>
                 </form>
             <br>
                 <div>
