--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <title>Schedule</title>
 </head>
-<body>
-<img src= "https://i.imgur.com/imef9xt.jpg" alt="Schedule">
+<header>
+    <h1 style="font-family: Garamond">Schedule</h1>
+</header>
+<body style="font-family: Garamond">
+<img src= "https://i.imgur.com/imef9xt.jpg" alt="Schedule" width="1100" height="650">
+    <br>
+    <br>
+<a href="{{ url_for('type') }}">Go back</a>
+
 </body>
 </html>
