--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="font-family: Garamond">
     <div class="container">
         {% block content %}
         {% endblock %}
