--- a/templates/student.html
+++ b/templates/student.html
@@ -6,17 +6,17 @@
     <title>Student Page</title>
 </head>
 
-<body>
+<body style="font-family: Garamond">
 
 <div id="navbar" class="navbar-collapse collapse ">
 <header>
-    <h1> Student</h1>
+    <h1 > Student</h1>
 </header>
         <ul class="nav navbar-nav">
-            <li><a href="/student/information">My info</a></li>
-            <li><a href="/student/schedule">Schedule</a></li>
-            <li><a href="/student/homework">Homework</a></li>
-            <li><a href="/student/progress">Progress</a></li>
+            <li><a href="/information">My info</a></li>
+            <li><a href="/schedule">Schedule</a></li>
+            <li><a href="/homework">Homework</a></li>
+            <li><a href="/progress">Progress</a></li>
         </ul>
 
         <br>
