--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -6,17 +6,17 @@
     <title>Teacher Page</title>
 </head>
 
-<body>
+<body style="font-family: Garamond">
 
 <div id="navbar" class="navbar-collapse collapse ">
 <header>
     <h1> Teacher </h1>
 </header>
         <ul class="nav navbar-nav">
-            <li><a href="/student/information">My info</a></li>
-            <li><a href="/faqs">Schedule</a></li>
-            <li><a href="/availability">Homework</a></li>
-            <li><a href="/Quiz">Progress</a></li>
+            <li><a href="information">My info</a></li>
+            <li><a href="/schedule">Schedule</a></li>
+            <li><a href="/homework">Homework</a></li>
+            <li><a href="/progress">Progress</a></li>
         </ul>
 
         <br>
