--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,51 @@
 {% extends "layout.html" %}
 {% block body %}
     {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+        {% if messages %}
+            <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
 
-<div class="container" style="font-family: Garamond">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <form method=POST action="{{ url_for('login') }}">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="text" class="form-control" name="username" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" name="pass" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-primary btn-block" style="font-family: Garamond">Log In</button>
+    <div class="container" style="font-family: Garamond">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <form method=POST action="{{ url_for('login') }}">
+                    <table>
+                        <tr>
+                            <div class="form-group">
+                                <td align="right">
+                                    <label for="exampleInputEmail1">Username</label>
+                                </td>
+                                <td>
+                                    <input type="text" class="form-control" name="username" placeholder="Username">
+                                </td>
+                            </div>
+                        </tr>
+                        <tr>
+                            <div class="form-group">
+                                <td>
+                                    <label for="exampleInputPassword1">Password</label>
+                                </td>
+                                <td><input type="password" class="form-control" name="pass" placeholder="Password">
+                                </td>
+                            </div>
+                        </tr>
+                    </table>
+
+                    <button type="submit" class="btn btn-primary btn-block" style="font-family: Garamond">Log
+                        In
+                    </button>
+
                 </form>
-            <br>
+                <br>
                 <div>
-                Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>.
+                    Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a>.
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
